# model_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  ModelViewer.cpp  ModelViewer.sln  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  OGLUtils.hpp  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
include/fast_obj/: fast_obj.h
include/glad/: glad.h
shaders/: VertexShader.glsl
shaders/color/: PixelShader.glsl  VertexShader.glsl
shaders/texture/: PixelShader.glsl  VertexShader.glsl
src/: ModelViewer.cpp  OGLUtils.hpp  Renderer.cpp  Renderer.h
src/Assets/: Camera.cpp  Camera.h  Model.cpp  Model.h  Texture.cpp
src/GLAD/: glad.c
src/Managers/: ShaderManager.cpp
src/Structures/: IndexBuffer.cpp  VAO.cpp  VertexBuffer.cpp
